--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
         <!-- Barra do menu -->
         <nav>
             <div id="menu">
-                <a href="Website.html"><img class = "inicio" src="imgs/Smallimage.png"/></a>
+                <a href="index.html"><img class = "inicio" src="imgs/Smallimage.png"/></a>
             </div>
         </nav>
         <nav id=redline>
