--- a/QuemSomos.html
+++ b/QuemSomos.html
@@ -14,10 +14,10 @@
                 <div id="menu">
                     <a class = "inicio" href="Website.html"><img src="imgs/Smallimage.png" title="CRATEx"/></a>
                     <a onclick="myFunction()">Log In</a>
-                    <a class="quemsomos" href="QuemSomos.html">Quem Somos</a>
+                    <a class="quemsomos" href="index.html">Quem Somos</a>
                     <a class="orcamentos" href="Orcamentos.html">Orçamentos</a>
-                    <a class="clientes" href="Website.html#text">Clientes</a>
-                    <a class="servicos" href="Website.html#dropdowns">Serviços</a>
+                    <a class="clientes" href="index.html#text">Clientes</a>
+                    <a class="servicos" href="index.html#dropdowns">Serviços</a>
                 </div>
             <nav class=redline></nav>
         </nav>
