--- a/QuemSomos.html
+++ b/QuemSomos.html
@@ -12,7 +12,7 @@
     <div id=everything>
         <nav ><img id=transparentimage src="imgs/transparent_image.png" width=100% height=100%/>
                 <div id="menu">
-                    <a class = "inicio" href="Website.html"><img src="imgs/Smallimage.png" title="CRATEx"/></a>
+                    <a class = "inicio" href="index.html"><img src="imgs/Smallimage.png" title="CRATEx"/></a>
                     <a onclick="myFunction()">Log In</a>
                     <a class="quemsomos" href="index.html">Quem Somos</a>
                     <a class="orcamentos" href="Orcamentos.html">Orçamentos</a>
